# iks-news

./: .env.example  .gitignore  Invite Iksperial News Bot.url  Open Todays Digest.cmd  README.md  Run Iksperial News Bot.cmd  pyproject.toml
.claude/: settings.local.json
data/: today_digest_preview.html
src/market_digest_bot/: __init__.py  __main__.py  ai_processor.py  bot.py  config.py  digest.py  direct_feeds.py  html_preview.py  models.py  news_fetcher.py  storage.py
